# TradingMonitor

./: .gitignore  .trademachine-export.json  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  workspace.toml
.github/workflows/: docker-publish.yml
alembic/versions/: 4bddbcefddce_nullable_false_required_fields.py  550ad93f913d_modernize_sqlalchemy_models.py  a1b2c3d4e5f6_create_hypertables.py  a7b8c9d0e1f2_add_open_profit_to_runtime_snapshots.py  b794a8071944_float_to_numeric_financial_fields.py  c1d2e3f4a5b6_add_benchmarks_tables.py  d6e7f8a9b0c1_add_strategy_pnl_continuous_aggregates.py  e3f1a2b4c5d6_add_symbols_table.py  f4d9e2a3b6c7_link_symbols_to_strategies_and_backtests.py  f7b8c9d0e1f2_add_timescale_compression_policies.py
bases/trading_monitor_cli/: pyproject.toml
bases/trading_monitor_cli/test/trademachine/trading_monitor_cli/: test_database_connection.py
bases/trading_monitor_dashboard/: pyproject.toml
bases/trading_monitor_dashboard/src/trademachine/trading_monitor_dashboard/: app.py  backtest_import_service.py  bridge.py  routes.py
bases/trading_monitor_dashboard/src/trademachine/trading_monitor_dashboard/static/: api-client.js  dashboard.js  page-account.js  page-benchmarks.js  page-correlation-standalone.js  page-correlation.js  page-portfolio.js  page-real.js  page-strategy.js  table-renderer.js
bases/trading_monitor_dashboard/src/trademachine/trading_monitor_dashboard/templates/: base.html  benchmarks.html  correlation_standalone.html  login.html  real.html  symbol.html
bases/trading_monitor_dashboard/test/trademachine/trading_monitor_dashboard/: conftest.py  test_live_backend.py
components/core/: pyproject.toml
components/mt5/: pyproject.toml
components/tradingmonitor_analytics/: pyproject.toml
components/tradingmonitor_analytics/src/trademachine/tradingmonitor_analytics/metrics/: repository.py
components/tradingmonitor_analytics/src/trademachine/tradingmonitor_analytics/metrics/plugins/: __init__.py  base.py  calmar.py  expected_value.py  max_drawdown.py  recovery.py  risk_reward.py
components/tradingmonitor_analytics/src/trademachine/tradingmonitor_analytics/services/: __init__.py  benchmark_scheduler.py  dashboard_metrics.py  dashboard_overview.py  dashboard_shared.py
components/tradingmonitor_analytics/test/trademachine/tradingmonitor_analytics/: test_calculator.py  test_calculator_extended.py  test_dashboard_analysis.py  test_dashboard_overview.py  test_dashboard_shared.py  test_metrics_plugins.py  test_qs_report.py
components/tradingmonitor_ingestion/: pyproject.toml
components/tradingmonitor_ingestion/src/trademachine/tradingmonitor_ingestion/ingestion/: benchmark_sync.py  cache.py  processors.py  schemas.py  tcp_server.py
components/tradingmonitor_ingestion/test/trademachine/tradingmonitor_ingestion/: test_schemas.py
components/tradingmonitor_storage/: pyproject.toml
components/tradingmonitor_storage/src/trademachine/tradingmonitor_storage/: api_schemas.py  config.py  constants.py  public.py
components/tradingmonitor_storage/src/trademachine/tradingmonitor_storage/db/: database.py  deal_filters.py  repository.py
components/tradingmonitor_storage/src/trademachine/tradingmonitor_storage/utils/: notifications.py
components/tradingmonitor_storage/test/trademachine/tradingmonitor_storage/: test_datamanager_settings.py  test_migrations.py  test_repository.py
mt5/: MetricsPublisher.mq5
projects/tradingmonitor/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  tradingmonitor_ui_ux_analysis.md
projects/tradingmonitor/alembic/: env.py
projects/tradingmonitor/alembic/versions/: 0dff7b8ac201_backtest_parameters_text_to_jsonb.py  131b8e8f274a_add_indexes_and_ingestion_errors.py  42abc1234_set_default_initial_balance.py  dbf05a2a2df4_add_backtest_tables.py  e4f5a6b7c8d9_add_strategy_equity_continuous_aggregates.py  f1a0c9d2e3b4_add_strategy_runtime_snapshots.py  f2b7c4d5e6f7_reconcile_settings_and_strategy_drawdown.py  f3c8d1e2a4b5_add_deal_ingestion_keys.py  f5e1a2b3c4d5_add_defaults_and_checks.py  f6a7b8c9d0e1_rebalance_query_indexes.py
projects/tradingmonitor/scripts/: generate_data.py
scripts/: simulate_mt5.py
src/trademachine/core/: logger.py  metrics.py  public.py
src/trademachine/mt5/: parser.py
src/trademachine/trading_monitor_cli/: main.py
src/trademachine/trading_monitor_dashboard/: routes.py  websocket.py
src/trademachine/trading_monitor_dashboard/static/: page-advanced.js  page-index.js  page-settings.js  page-symbol.js  style.css
src/trademachine/trading_monitor_dashboard/templates/: account.html  advanced_analysis.html  correlation.html  index.html  portfolio.html  settings.html  strategy.html
src/trademachine/tradingmonitor_analytics/: public.py
src/trademachine/tradingmonitor_analytics/analysis/: benchmarks.py  drift.py
src/trademachine/tradingmonitor_analytics/metrics/: calculator.py  utils.py
src/trademachine/tradingmonitor_analytics/services/: dashboard_analysis.py  dashboard_history.py  dashboard_strategies.py
src/trademachine/tradingmonitor_ingestion/: public.py
src/trademachine/tradingmonitor_ingestion/ingestion/: tcp_server.py
src/trademachine/tradingmonitor_ingestion/integrations/: datamanager.py
src/trademachine/tradingmonitor_storage/: config.py
src/trademachine/tradingmonitor_storage/db/: aggregates.py  database.py  models.py
src/trademachine/tradingmonitor_storage/services/: benchmark_scheduler_settings.py  datamanager_settings.py  settings_utils.py  telegram_settings.py
test/tradingmonitor_analytics/trademachine/tradingmonitor_analytics/: test_benchmarks.py  test_dashboard_history.py  test_dashboard_metrics.py  test_dashboard_overview.py  test_dashboard_strategies.py  test_drift.py  test_metrics.py  test_metrics_repository.py
test/tradingmonitor_ingestion/trademachine/tradingmonitor_ingestion/: test_ingestion.py
test/tradingmonitor_storage/trademachine/tradingmonitor_storage/: conftest.py  test_aggregates.py  test_config.py  test_database.py  test_notifications.py  (+1 more)
(+7 files in other folders)
