[project]
name = "tradingmonitor"
version = "0.1.0"
description = "Real-time trading monitor dashboard with MT5 ingestion and analytics"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.11",
    "fastapi>=0.128.8",
    "uvicorn[standard]>=0.40.0",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "beautifulsoup4>=4.14.3",
    "python-multipart>=0.0.22",
    "pandas>=2.2.3,<3.0.0",
    "numpy>=2.4.3",
    "quantstats>=0.0.81",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.1",
    "typer>=0.24.1",
]

[project.scripts]
trading-monitor = "trademachine.trading_monitor_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trademachine"]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "integration: marks tests that require external services",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.9.0",
]
