[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trademachine-trading-monitor-cli"
version = "0.1.0"
description = "trademachine-trading-monitor-cli brick"
dependencies = [
    "trademachine-core",
    "trademachine-tradingmonitor-ingestion",
    "trademachine-tradingmonitor-storage",
    "trademachine-tradingmonitor-analytics",
]

[project.scripts]
trading-monitor = "trademachine.trading_monitor_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["trademachine*"]
