[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trademachine-tradingmonitor-ingestion"
version = "0.1.0"
description = "trademachine-tradingmonitor-ingestion brick"
dependencies = ["trademachine-datamanager", "trademachine-tradingmonitor-storage"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["trademachine*"]
