[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trademachine-tradingmonitor-storage"
version = "0.1.0"
description = "trademachine-tradingmonitor-storage brick"
dependencies = ["trademachine-core"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["trademachine*"]
