[project]
name = "tradingmonitor-project"
version = "0.1.0"
description = "TradingMonitor build project"
dependencies = [
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.11",
    "fastapi>=0.128.8",
    "uvicorn>=0.40.0",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "beautifulsoup4>=4.14.3",
    "python-multipart>=0.0.22",
    "pandas>=2.2.3,<3.0.0",
    "numpy>=2.4.3",
    "quantstats>=0.0.81",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.1",
    "typer>=0.24.1"
]

[tool.polylith.projects]
"trademachine/tradingmonitor_storage" = "components"
"trademachine/tradingmonitor_ingestion" = "components"
"trademachine/tradingmonitor_analytics" = "components"
"trademachine/core" = "components"
"trademachine/mt5" = "components"
"trademachine/trading_monitor_dashboard" = "bases"
"trademachine/trading_monitor_cli" = "bases"

[tool.uv.sources]
trademachine = { path = "../../components/trademachine" }
trademachine_bases = { path = "../../bases/trademachine" }
